--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "./src/main.ts",
   "scripts": {
-    "dev": "webpack serve --mode=development --config ./build/webpack.config.js",
-    "build": "webpack --mode=production --config ./build/webpack.config.js",
+    "dev": "webpack serve --mode=development --config ./build/webpack.config.ts",
+    "build": "webpack --mode=production --config ./build/webpack.config.ts",
     "prepare": "husky install",
-		"commit": "npx cz"
+    "commit": "npx cz",
+		"lint": "eslint --ext .js,.jsx,.ts,.tsx,.vue src",
+		"lint:fix": "npx eslint ./src/**/*.{vue,js,jsx,ts,tsx} --fix"
   },
   "lint-staged": {
-    "*.{vue,js,ts}": "eslint --fix"
+    "*.{vue,js,ts,jsx,tsx}": "eslint --fix"
   },
   "keywords": [],
   "author": "",
@@ -22,8 +24,9 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@soda/friendly-errors-webpack-plugin": "^1.8.1",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "@vicons/ionicons5": "^0.12.0",
     "@vue/compiler-sfc": "^3.2.31",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
@@ -31,14 +34,9 @@
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "cz-customizable": "^6.3.0",
-    "eslint": "^8.10.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
-    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.5",
@@ -53,6 +51,8 @@
     "typescript": "^4.6.2",
     "unplugin-auto-import": "^0.6.4",
     "unplugin-vue-components": "^0.18.0",
+    "vfonts": "^0.0.3",
+    "vue-eslint-parser": "^8.3.0",
     "vue-loader": "^17.0.0",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
@@ -63,9 +63,9 @@
   "dependencies": {
     "axios": "^0.26.1",
     "dayjs": "^1.10.8",
+    "pinia": "^2.0.11",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.14",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.0.14"
   },
   "config": {
     "commitizen": {
